# llm-council

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: models.yaml
council/: __init__.py  __main__.py  api.py  caching.py  cli.py  client.py  config.py  engine.py  extract.py  prompts.py  tracing.py
council/static/: index.html
eval/: run_eval.py
tests/: conftest.py  test_anonymize.py  test_api.py  test_caching.py  test_client.py  test_config.py  test_engine.py  test_extract.py  test_rate_limiter.py
traces/: ad8b90646885.jsonl  e9064eefc6e2.jsonl
