[project]
name = "llm-council"
version = "0.1.0"
description = "Multi-agent LLM debate system on NVIDIA NIM endpoints"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]
eval = ["datasets>=3.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["council*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
